--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Cart from './cart.jsx';
+
 const { title } = Astro.props;
 ---
 <!DOCTYPE html>
@@ -21,6 +23,13 @@ const { title } = Astro.props;
   <style global>
     @font-face {
       font-display: swap;
+      font-family: body-font;
+      font-weight: 10 1000;
+      src: url("/fonts/body.woff2") format("woff2");
+    }
+
+    @font-face {
+      font-display: swap;
       font-family: heading-font;
       font-weight: 10 1000;
       src: url("/fonts/heading.woff2") format("woff2");
@@ -28,7 +37,18 @@ const { title } = Astro.props;
 
     :root {
       --black: hsl(229 32% 13% / 1);
+      --lightGrey: hsl(234 8% 89% / 1);
+      --darkGrey: hsl(218 8% 42% / 1);
+      --white: hsl(0 0% 100% / 1);
+      --pink: hsl(331 100% 67% / 1);
+      --orange: hsl(36 100% 58% / 1);
+      --blue: hsl(186 86% 59% / 1);
+      --teal: hsl(174 90% 75% / 1);
+      --green: hsl(162 100% 50% / 1);
+      --gradient: linear-gradient(var(--teal) 0%, var(--green) 100%);
       --fontHeading: heading-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+        Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      --fontBody: body-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
         Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
 
@@ -39,18 +59,195 @@ const { title } = Astro.props;
     html,
     body {
       color: var(--black);
+      font-family: var(--fontBody);
       font-size: 18px;
+      line-height: 1.45;
       margin: 0;
     }
 
-    h1 {
+    header {
+      align-items: center;
+      background: var(--black);
+      border-bottom: 4px solid var(--pink);
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem max(5vw, 1rem) 0.625rem;
+    }
+
+    .cart {
+    }
+
+    .icon {
+      align-items: center;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      display: flex;
+      gap: 0.25rem;
+      justify-content: center;
+    }
+
+    .icon img {
+      display: block;
+      width: 2rem;
+    }
+
+    .count {
+      background: var(--teal);
+      border-radius: 50%;
+      display: block;
+      font-family: var(--fontHeading);
+      font-size: 0.875rem;
+      font-weight: 600;
+      height: 1.5rem;
+      padding: 0.125rem;
+      text-align: center;
+      width: 1.5rem;
+    }
+
+    .drawer {
+      background: var(--white);
+      height: 100vh;
+      overflow-y: scroll;
+      position: fixed;
+      right: calc(-1 * min(90vw, 400px));
+      top: 0;
+      transition: all 150ms ease-in-out;
+      width: min(90vw, 400px);
+    }
+
+    .drawer.open {
+      box-shadow: 0 0 10px var(--darkGrey);
+      right: 0;
+    }
+
+    .close {
+      background: transparent;
+      border: none;
+      color: var(--black);
+      cursor: pointer;
+      font-family: var(--fontHeading);
+      font-size: 1rem;
+      font-variant: all-petite-caps;
+      letter-spacing: 0.1em;
+      margin: 0.5rem;
+    }
+
+    .drawer h3 {
+      margin: 2rem 1.5rem 0;
+    }
+
+    .drawer ul {
+      border-top: 1px solid var(--lightGrey);
+      list-style: none;
+      margin: 1rem 0;
+      padding: 0;
+    }
+
+    .drawer li {
+      border-bottom: 1px solid var(--lightGrey);
+      font-size: 0.875rem;
+      margin: 0;
+      padding: 1rem 1.5rem;
+    }
+
+    .drawer p {
+      margin: 0;
+    }
+
+    .drawer li.total {
+      border-bottom: none;
+      font-size: 1rem;
+      font-weight: 700;
+    }
+
+    .drawer .button {
+      margin: 0 1.5rem;
+      width: auto;
+    }
+
+    .drawer .no-items {
+      color: var(--darkGrey);
+      margin: 1rem 1.5rem;
+      font-weight: 300;
+    }
+
+    .drawer .empty-cart {
+      background: transparent;
+      border: 0;
+      color: var(--darkGrey);
+      cursor: pointer;
+      display: block;
+      margin: 2rem auto;
+      text-decoration: underline;
+    }
+
+    h1,
+    h2 {
       color: var(--black);
       font-family: var(--fontHeading);
       line-height: 1.1;
     }
+
+    footer {
+      border-top: 1px solid var(--lightGrey);
+      color: var(--darkGrey);
+      font-size: 0.75rem;
+      margin: 2rem auto 0;
+      max-width: 1280px;
+      padding: 1rem max(5vw, 1rem);
+      text-align: center;
+    }
+
+    footer a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .heart {
+      display: inline-block;
+      margin-inline: 0.125rem;
+      vertical-align: top;
+      width: 1.25rem;
+    }
+
+    .heart img {
+      display: block;
+      width: 100%;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <a href="/">
+      <img src="/images/header.svg" alt="Jamstack Conf 2021" />
+    </a>
+    <Cart client:load />
+  </header>
+
   <slot />
+
+  <footer>
+    <a href="https://ntl.fyi">
+      made with <span class="heart" role="img" aria-label="love"><img src="https://res.cloudinary.com/jlengstorf/image/upload/f_auto,q_auto,w_50/v1596146333/netlify/netliheart.png" alt="a heart with the Netlify logo pattern in it" /></span> by the Netlify team
+    </a>
+  </footer>
+
+  <script
+    src="https://browser.sentry-cdn.com/6.13.3/bundle.tracing.min.js"
+    integrity="sha384-bMCNwkS0NNIDdeiv/LpGYQjDzjnZSqqN12IWUUyPlSTLXQloo4EAl9P9mW9AyVzw"
+    crossorigin="anonymous"
+  ></script>
+  <script type="module">
+    Sentry.init({
+      dsn: "https://d7487daff42b436b989eb3d3ab3d147f@o530194.ingest.sentry.io/6038237",
+      integrations: [new Sentry.Integrations.BrowserTracing()],
+
+      // Set tracesSampleRate to 1.0 to capture 100%
+      // of transactions for performance monitoring.
+      // We recommend adjusting this value in production
+      tracesSampleRate: 1.0,
+    });
+  </script>
 </body>
 </html>
